# rapat-pleno-kpu

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  deploy-pages.yml
docs/: ANGGARAN-SIPLENO.csv  MVP-SIPLENO.md  PROPOSAL-SIPLENO-JABAR.md  ROADMAP-SAAS-SIPLENO.md
petasuara/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
petasuara/.github/workflows/: ci.yml
petasuara/configs/dapil/: contoh-dapil.yaml
petasuara/db/: schema.sql
petasuara/docs/: arsitektur.md  cetak-biru.md
petasuara/docs/asli/: ArsitekturAplikasiPetaSuara.docx  CetakBiruPetaSuara.docx
petasuara/kamus/: normalisasi-id-umum.yaml
petasuara/prompts/: posisi-pesan-v1.md
petasuara/src/petasuara/: __init__.py  config.py
petasuara/src/petasuara/akuisisi/: __init__.py  base.py  berita.py  medsos.py  pemilu.py  transkripsi.py
petasuara/src/petasuara/analytics/: __init__.py  api.py
petasuara/src/petasuara/laporan/: __init__.py
petasuara/src/petasuara/nlp/: __init__.py  anotator.py  sentimen.py  topik.py
petasuara/src/petasuara/prapemrosesan/: __init__.py  bahasa.py  dedup.py  normalisasi.py
petasuara/src/petasuara/qc/: __init__.py  benchmark.py  gerbang.py  reliabilitas.py
petasuara/src/petasuara/worker/: __init__.py  tugas.py
petasuara/templates/laporan/: README.md
petasuara/tests/: test_anotator.py  test_prapemrosesan.py  test_qc.py
src/: App.tsx  index.css
src/components/: InstallButton.tsx  Markdown.tsx  Modal.tsx  Navbar.tsx  QrCode.tsx  StatusBadge.tsx
(+27 files in other folders)
