[project]
name = "petasuara"
version = "0.1.0"
description = "PetaSuara — platform analitik kampanye berbasis NLP untuk caleg (modular monolith)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "psycopg[binary]>=3.1",
    "sqlalchemy>=2.0",
    "redis>=5.0",
    "rq>=1.16",
    "boto3>=1.34",            # object storage S3-compatible (R2/MinIO)
    "feedparser>=6.0",
    "trafilatura>=1.8",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "datasketch>=1.6",        # MinHash dedup
]

[project.optional-dependencies]
# Komponen NLP berat — pasang hanya di node worker/GPU, bukan di node API.
nlp = [
    "bertopic>=0.16",
    "sentence-transformers>=2.7",
    "transformers>=4.40",
    "torch>=2.2",
    "faster-whisper>=1.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
